initial Grid Layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mr-Or-Ms?</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" type="image/png" href="./images/icn.png" />
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="icard name-section">
+        <div class="ns-header">
+          <h1>Mr. Or Ms. ?!</h1>
+        </div>
+        <div class="ns-input"></div>
+        <div class="ns-gender"></div>
+        <div class="ns-submit"></div>
+      </div>
+      <div class="icard predection-section">
+        <div class="ps-header"></div>
+        <div class="ps-result"></div>
+        <div class="ps-resultbar"></div>
+      </div>
+      <div class="icard history-section">
+        <div class="hs-header"></div>
+        <div class="hs-result"></div>
+        <div class="hs-choice"></div>
+      </div>
+    </div>
+  </body>
 </html>
