--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="ns-input">
           <label>Name</label><br />
-          <input type="text" required />
+          <input type="text" id="input-name-id" required/>
         </div>
         <div class="ns-gender">
-          <input type="radio" name="select" id="option-1" checked />
+          <input type="radio" name="select" id="option-1" />
           <input type="radio" name="select" id="option-2" />
           <label for="option-1" class="option option-1">
             <div class="dot"></div>
@@ -32,7 +32,7 @@
           </label>
         </div>
         <div class="ns-submit">
-          <button class="submit-button">Submit</button>
+          <button class="submit-button" id="submit-button-id">Submit</button>
         </div>
       </div>
       <div class="icard predection-section">
@@ -59,5 +59,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts.js"></script>
   </body>
 </html>
