predection function completed

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <p>Predection</p>
         </div>
         <div class="ps-result">
-          <label>Male 83%</label>
+          <label id="ps-result-id"></label>
         </div>
         <div class="ps-resultbar">
-          <div class="ps-resultbar-fill"></div>
+          <div class="ps-resultbar-fill" id="ps-resultbar-fill-id"></div>
         </div>
       </div>
       <div class="icard history-section">
