save my predection button function addeed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="ns-input">
           <label>Name</label><br />
-          <input type="text" id="input-name-id" required/>
+          <input type="text" id="input-name-id" required />
         </div>
         <div class="ns-gender">
           <input type="radio" name="select" id="option-1" />
@@ -48,13 +48,14 @@
       </div>
       <div class="icard history-section">
         <div class="hs-header">
-          <lable>Saved History</lable>
+          <lable>Saved Answer</lable>
         </div>
         <div class="hs-result">
-          <lable>.: Male :.</lable>
+          <lable id = "hs-result-id">-</lable>
         </div>
         <div class="hs-choice">
-          <button class="save-button">Save</button>
+          <button class="save-button-me" id="save-button-me-id">Save My Predection</button>
+          <button class="save-button-api" id="save-button-api-id">Save API Predection</button>
           <button class="clear-button">Clear</button>
         </div>
       </div>
