clear and save api button function added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="hs-choice">
           <button class="save-button-me" id="save-button-me-id">Save My Predection</button>
           <button class="save-button-api" id="save-button-api-id">Save API Predection</button>
-          <button class="clear-button">Clear</button>
+          <button class="clear-button" id="clear-button-id">Clear</button>
         </div>
       </div>
     </div>
