some minor changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="ns-input">
           <label>Name</label><br />
-          <input type="text" id="input-name-id" required />
+          <input type="text" id="input-name-id" required maxlength="255" pattern="[a-z]"placeholder=""/>
         </div>
         <div class="ns-gender">
           <input type="radio" name="select" id="option-1" />
